@@ -28,6 +28,7 @@ plugins {
 configurations.all {
     exclude(group = "com.github.jnr") // Unused and has licensing issues
     exclude(group = "commons-logging", "commons-logging")
+    exclude(group = "org.jetbrains", module = "annotations")
     exclude(group = "org.slf4j", module = "slf4j-nop")
 }
 
@@ -71,6 +72,7 @@ tasks.javadoc { options.encoding = "UTF-8" }
 
 tasks.withType<Test> {
     finalizedBy(tasks.jacocoTestReport)
+    jvmArgs = listOf("-XX:+EnableDynamicAgentLoading") // Allow byte buddy for Mockito
     maxHeapSize = "4096m"
     minHeapSize = "1024m"
     systemProperty("user.timezone", "UTC")
